fixed centering issue on mobile

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -418,7 +418,7 @@ ul > .iconsheader {
 }
 
 .title {
-	margin-bottom: .82em;
+	margin-bottom: .42em;
 
 }
 /*****************************/
@@ -427,7 +427,7 @@ ul > .iconsheader {
 
 #backImage {
 	background-image: url('/images/prada.png');
-
+	text-align: center;
 }
 #deletepadding {
 	padding-left: 0px;
@@ -682,6 +682,7 @@ ul#indexmenu {
 	background-color: transparent;
 	border-style: none;
 }
+
 .portfolioProfile {
 	max-width: 250px;
 	margin-bottom: 40px;
@@ -691,7 +692,8 @@ ul#indexmenu {
 	border-width: 4px;
 	border-color: #fff;
 	
-	margin-left: 10%;
+	margin-left: auto;
+	margin-right: auto;
 
 
 }
